--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" style="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" style="text/css" href="CSS/style.css">
     
     <title>Lab 2: Transitions & Animation with Sodaro</title>
 
@@ -15,5 +15,6 @@
         <div class="animated-box"></div>
         <p><b>Note:</b>This is my Grad Thesis Applicarion to read human and news behavior using API Data </p>
     </div>
+    <footer>2025</footer>
 </body>
 </html>
